@@ -7,6 +7,7 @@ compared to 0.5.0:
  - NEON optimizations for SGR on ARM32
  - Fix mismatch issue in x86 asm in inverse identity transforms
  - Fix build issue in ARM64 assembly if debug info was enabled
+ - Add a workaround for Xcode 11 -fstack-check bug
 
 
 Changes for 0.5.0 'Asiatic Cheetah':
